--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		 <p>&nbsp;</p>
 		 <p>&nbsp;</p>
          <p>Copyright © 2021. All Rights Reserved</p>
-		 <p>Обучение в НТУ "ХПИ", 2021</p>
+		 <p>&nbsp;</p>
 		 <p>&nbsp;</p>
 	</footer><!-- footer -->
   </div><!-- #wrapper -->
