--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<article>
 				<h2>Мой контент</h2>
 				<p>Контент</p>
-				<p>&nbsp;</p>
+				<p>Здесь должен быть основной контент</p>
 			</article>
 			<aside>
 				<h3>Дополнительные материалы</h3>
